docs/releases/v0.3.5/npm-publication.md
# npm publication evidence for v0.3.5

Status: published

This file is generated by `close-release-publication` from public GitHub, npm, and npx evidence.

```yaml
publication:
  package: "@xiongxianfei/rigorloop"
  version: "0.3.5"
  release_tag: "v0.3.5"
  mode: "trusted-publishing"
  status: "published"

workflow:
  release_workflow: ".github/workflows/release.yml"
  published_by_workflow: true
  unsupported_tags_rejected: true

tarball:
  filename: "xiongxianfei-rigorloop-0.3.5.tgz"
  sha256: "not-recorded-for-trusted-publishing"
  pack_command: "npm pack --prefix packages/rigorloop"
  content_check: "pass"
  smoke_result: "pass"

trusted_publishing:
  configured: true
  workflow: ".github/workflows/release.yml"
  id_token_write: true

bootstrap:
  used: false
  approving_maintainer: "not-applicable"
  publish_command: "not-applicable"

github:
  release_url: "https://github.com/xiongxianfei/rigorloop/releases/tag/v0.3.5"

npm:
  published: true
  package_url: "https://www.npmjs.com/package/@xiongxianfei/rigorloop/v/0.3.5"
  published_at: "2026-07-04T15:51:38.090Z"
  dist_tag_latest: "0.3.5"
  integrity: "sha512-qanTtBTfxMXMhdAW6Kd4K1L1O2e0VLLb0bzxW2aYiJ1H6ClQWONxti3t2fOWNK71jBgMPUXPeScv9EsyaKuT5Q=="
  tarball: "https://registry.npmjs.org/@xiongxianfei/rigorloop/-/rigorloop-0.3.5.tgz"

version_smoke:
  command: "npx @xiongxianfei/rigorloop@0.3.5 version"
  result: "pass"
  output_summary: "@xiongxianfei/rigorloop 0.3.5"

target_init_smoke:
  codex:
    command: "npx @xiongxianfei/rigorloop@0.3.5 init codex"
    npm_version: "0.3.5"
    package_source: "npm public registry"
    target: "codex"
    official_archive_url: "https://github.com/xiongxianfei/rigorloop/releases/download/v0.3.5/rigorloop-adapter-codex-v0.3.5.zip"
    archive_sha256: "sha256:5f076e948b3b46d0063382e1a67887e6f60a79ec59b3d5db22c75d0e1b6b3382"
    installed_roots: ".agents/skills"
    tree_hashes: "sha256:8e211a18be986a6ea423f3217f5230242ad805e766bba3826ef92e5e1ce9e66b"
    file_counts: "49"
    command_output_summary: "RigorLoop initialized with verified Codex target support."
    archive_sha256_verified: true
    tree_hash_verified: true
    result: "pass"
    closeout_blocker: "none"
    post_publish_closeout_blocked: false

  claude:
    command: "npx @xiongxianfei/rigorloop@0.3.5 init claude"
    npm_version: "0.3.5"
    package_source: "npm public registry"
    target: "claude"
    official_archive_url: "https://github.com/xiongxianfei/rigorloop/releases/download/v0.3.5/rigorloop-adapter-claude-v0.3.5.zip"
    archive_sha256: "sha256:38a375fb5ad7a18219dd25a4ac30c401b8d665d649d4ead5a4427b3e84b7ec88"
    installed_roots: ".claude/skills"
    tree_hashes: "sha256:16b83d12e84bbf5b4c63c1cdd1adda1bc1e8098fc42e7be6e153a2058bf5e67d"
    file_counts: "48"
    command_output_summary: "RigorLoop initialized with verified Claude Code target support."
    archive_sha256_verified: true
    tree_hash_verified: true
    result: "pass"
    closeout_blocker: "none"
    post_publish_closeout_blocked: false

  opencode:
    command: "npx @xiongxianfei/rigorloop@0.3.5 init opencode"
    npm_version: "0.3.5"
    package_source: "npm public registry"
    target: "opencode"
    official_archive_url: "https://github.com/xiongxianfei/rigorloop/releases/download/v0.3.5/rigorloop-adapter-opencode-v0.3.5.zip"
    archive_sha256: "sha256:59d0c152b08a55a384ac52ae9736dcaada1a339d6a3c3ed35a7d368e0cffde39"
    installed_roots: ".opencode/skills;.opencode/commands"
    tree_hashes: ".opencode/skills=sha256:16b83d12e84bbf5b4c63c1cdd1adda1bc1e8098fc42e7be6e153a2058bf5e67d;.opencode/commands=sha256:440cbdafa6ef691c559025b698b0c4fc7aeb5e1b57d85580380a11845f348761"
    file_counts: ".opencode/skills=48;.opencode/commands=10"
    command_output_summary: "RigorLoop initialized with verified opencode target support."
    archive_sha256_verified: true
    tree_hash_verified: true
    result: "pass"
    closeout_blocker: "none"
    post_publish_closeout_blocked: false
```

| Target | Command | npm version | Package source | Public archive URL | Installed root(s) | Tree hash value(s) | File count(s) | Command output summary | Archive verified | Tree verified | Result | Closeout blocker |
|---|---|---|---|---|---|---|---|---|---|---|---|---|
| codex | `npx @xiongxianfei/rigorloop@0.3.5 init codex` | `0.3.5` | npm public registry | https://github.com/xiongxianfei/rigorloop/releases/download/v0.3.5/rigorloop-adapter-codex-v0.3.5.zip | .agents/skills | sha256:8e211a18be986a6ea423f3217f5230242ad805e766bba3826ef92e5e1ce9e66b | 49 | RigorLoop initialized with verified Codex target support. | true | true | pass | none |
| claude | `npx @xiongxianfei/rigorloop@0.3.5 init claude` | `0.3.5` | npm public registry | https://github.com/xiongxianfei/rigorloop/releases/download/v0.3.5/rigorloop-adapter-claude-v0.3.5.zip | .claude/skills | sha256:16b83d12e84bbf5b4c63c1cdd1adda1bc1e8098fc42e7be6e153a2058bf5e67d | 48 | RigorLoop initialized with verified Claude Code target support. | true | true | pass | none |
| opencode | `npx @xiongxianfei/rigorloop@0.3.5 init opencode` | `0.3.5` | npm public registry | https://github.com/xiongxianfei/rigorloop/releases/download/v0.3.5/rigorloop-adapter-opencode-v0.3.5.zip | .opencode/skills;.opencode/commands | .opencode/skills=sha256:16b83d12e84bbf5b4c63c1cdd1adda1bc1e8098fc42e7be6e153a2058bf5e67d;.opencode/commands=sha256:440cbdafa6ef691c559025b698b0c4fc7aeb5e1b57d85580380a11845f348761 | .opencode/skills=48;.opencode/commands=10 | RigorLoop initialized with verified opencode target support. | true | true | pass | none |
