docs/releases/v0.3.6/npm-publication.md
# npm publication evidence for v0.3.6

Status: published

This file is generated by `close-release-publication` from public GitHub, npm, and npx evidence.

```yaml
publication:
  package: "@xiongxianfei/rigorloop"
  version: "0.3.6"
  release_tag: "v0.3.6"
  mode: "trusted-publishing"
  status: "published"

workflow:
  release_workflow: ".github/workflows/release.yml"
  published_by_workflow: true
  unsupported_tags_rejected: true

tarball:
  filename: "xiongxianfei-rigorloop-0.3.6.tgz"
  sha256: "not-recorded-for-trusted-publishing"
  pack_command: "npm pack --prefix packages/rigorloop"
  content_check: "pass"
  smoke_result: "pass"

trusted_publishing:
  configured: true
  workflow: ".github/workflows/release.yml"
  id_token_write: true

bootstrap:
  used: false
  approving_maintainer: "not-applicable"
  publish_command: "not-applicable"

github:
  release_url: "https://github.com/xiongxianfei/rigorloop/releases/tag/v0.3.6"

npm:
  published: true
  package_url: "https://www.npmjs.com/package/@xiongxianfei/rigorloop/v/0.3.6"
  published_at: "2026-07-06T14:25:35.036Z"
  dist_tag_latest: "0.3.6"
  integrity: "sha512-l2BCK+DOo6YoJdTciTJ/GW/pgJ+ddps5xEV8/v1XKdn3SoFx4GNhIQZKH+aV0VT2pGcwx6mlK+nH1h5EMyTb5Q=="
  tarball: "https://registry.npmjs.org/@xiongxianfei/rigorloop/-/rigorloop-0.3.6.tgz"

version_smoke:
  command: "npx @xiongxianfei/rigorloop@0.3.6 version"
  result: "pass"
  output_summary: "@xiongxianfei/rigorloop 0.3.6"

target_init_smoke:
  codex:
    command: "npx @xiongxianfei/rigorloop@0.3.6 init codex"
    npm_version: "0.3.6"
    package_source: "npm public registry"
    target: "codex"
    official_archive_url: "https://github.com/xiongxianfei/rigorloop/releases/download/v0.3.6/rigorloop-adapter-codex-v0.3.6.zip"
    archive_sha256: "sha256:e014a75f644d9e15af555152b12305ea756d6f97292210af150e62e7e35d4322"
    installed_roots: ".agents/skills"
    tree_hashes: "sha256:f35e8a55b7cfd7341a5e5ed09b6a25341d94cf3ceb45be9ceb9cba471a86c995"
    file_counts: "50"
    command_output_summary: "RigorLoop initialized with verified Codex target support."
    archive_sha256_verified: true
    tree_hash_verified: true
    result: "pass"
    closeout_blocker: "none"
    post_publish_closeout_blocked: false

  claude:
    command: "npx @xiongxianfei/rigorloop@0.3.6 init claude"
    npm_version: "0.3.6"
    package_source: "npm public registry"
    target: "claude"
    official_archive_url: "https://github.com/xiongxianfei/rigorloop/releases/download/v0.3.6/rigorloop-adapter-claude-v0.3.6.zip"
    archive_sha256: "sha256:ad1d9d291e8695cd512d5e059849446d026376461b0bca3f6300f7e594372f8a"
    installed_roots: ".claude/skills"
    tree_hashes: "sha256:3d6dc8842de0a359502323b064a69378d614e421a1c51e06e6c4303d5859d156"
    file_counts: "48"
    command_output_summary: "RigorLoop initialized with verified Claude Code target support."
    archive_sha256_verified: true
    tree_hash_verified: true
    result: "pass"
    closeout_blocker: "none"
    post_publish_closeout_blocked: false

  opencode:
    command: "npx @xiongxianfei/rigorloop@0.3.6 init opencode"
    npm_version: "0.3.6"
    package_source: "npm public registry"
    target: "opencode"
    official_archive_url: "https://github.com/xiongxianfei/rigorloop/releases/download/v0.3.6/rigorloop-adapter-opencode-v0.3.6.zip"
    archive_sha256: "sha256:7e226411fbb7385f6abe54a3a594547c061415fbffba857eb59eeaf02edadc6c"
    installed_roots: ".opencode/skills;.opencode/commands"
    tree_hashes: ".opencode/skills=sha256:3d6dc8842de0a359502323b064a69378d614e421a1c51e06e6c4303d5859d156;.opencode/commands=sha256:440cbdafa6ef691c559025b698b0c4fc7aeb5e1b57d85580380a11845f348761"
    file_counts: ".opencode/skills=48;.opencode/commands=10"
    command_output_summary: "RigorLoop initialized with verified opencode target support."
    archive_sha256_verified: true
    tree_hash_verified: true
    result: "pass"
    closeout_blocker: "none"
    post_publish_closeout_blocked: false
```

| Target | Command | npm version | Package source | Public archive URL | Installed root(s) | Tree hash value(s) | File count(s) | Command output summary | Archive verified | Tree verified | Result | Closeout blocker |
|---|---|---|---|---|---|---|---|---|---|---|---|---|
| codex | `npx @xiongxianfei/rigorloop@0.3.6 init codex` | `0.3.6` | npm public registry | https://github.com/xiongxianfei/rigorloop/releases/download/v0.3.6/rigorloop-adapter-codex-v0.3.6.zip | .agents/skills | sha256:f35e8a55b7cfd7341a5e5ed09b6a25341d94cf3ceb45be9ceb9cba471a86c995 | 50 | RigorLoop initialized with verified Codex target support. | true | true | pass | none |
| claude | `npx @xiongxianfei/rigorloop@0.3.6 init claude` | `0.3.6` | npm public registry | https://github.com/xiongxianfei/rigorloop/releases/download/v0.3.6/rigorloop-adapter-claude-v0.3.6.zip | .claude/skills | sha256:3d6dc8842de0a359502323b064a69378d614e421a1c51e06e6c4303d5859d156 | 48 | RigorLoop initialized with verified Claude Code target support. | true | true | pass | none |
| opencode | `npx @xiongxianfei/rigorloop@0.3.6 init opencode` | `0.3.6` | npm public registry | https://github.com/xiongxianfei/rigorloop/releases/download/v0.3.6/rigorloop-adapter-opencode-v0.3.6.zip | .opencode/skills;.opencode/commands | .opencode/skills=sha256:3d6dc8842de0a359502323b064a69378d614e421a1c51e06e6c4303d5859d156;.opencode/commands=sha256:440cbdafa6ef691c559025b698b0c4fc7aeb5e1b57d85580380a11845f348761 | .opencode/skills=48;.opencode/commands=10 | RigorLoop initialized with verified opencode target support. | true | true | pass | none |
